@@ -1,4 +1,8 @@
-﻿drkns 12.04.2015 22:26:53 +0200 - build 4345
+﻿drkns 13.04.2015 09:52:11 +0200 - build 4346
+
+1. Уточнение 4345.
+
+drkns 12.04.2015 22:26:53 +0200 - build 4345
 
 1. Рефакторинг.
 
